--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
             <button class="signup">Sign up</button>
         </div>
     </div>
+    <div class="logincontainer">
+        <div class="logincontainertitle">Login</div>
+        <div class="logincontainerdescription">Please input your information below.</div>
+        <div class="grouped">
+            <label class="labelforemail" for="email">Email</label>
+            <input class="emailinput" type="email" placeholder="Email">
+        </div>
+        <div class="grouped">
+            <label class="labelforemail" for="password">Password</label>
+            <input class="passwordinput" type="password" placeholder="Password">
+        </div>
+        <a class="logincontainerloginbutton" href="home.html">
+            <button class="logincontainerloginbuttondes" >Login</button>
+        </a>
+    </div>
 </body>
 </html>
