--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap">
 </head>
 <body>
@@ -27,6 +28,33 @@
                 <p>Jordan</p>
                 <img class="downarrow" src="angle-small-down.png">
             </button>
+        </div>
+    </div>
+    <div class="contactdisplaycontainer">
+        <div class="contactheader">Contact</div>
+        <div class="contactdescription">In order to contact me just click one of the links
+        below, it should redirect you to each of my profiles, thank you.
+        </div>
+    </div>
+    
+    <div class="contactlistcontainer">
+        <a class="iconsize" href="">
+            <img src="instagram.png" class="iconlinks">
+        </a>
+        <a class="iconsize" href="">
+            <img src="facebook.png" class="iconlinks">
+        </a>
+        <a class="iconsize" href="">
+            <img src="twitter.png" class="iconlinks">
+        </a>
+        <a class="iconsize" href="">
+            <img src="discord.png" class="iconlinks">
+        </a>
+    </div>
+
+    <div class="contactdisplaycontainer">
+        <div class="contactdescription">Don't harrass me yo anyways click on one of these
+            links and there goes my profile hehe.
         </div>
     </div>
 </body>
