--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap">
 </head>
 <body>
@@ -28,6 +29,20 @@
                 <img class="downarrow" src="angle-small-down.png">
             </button>
         </div>
+    </div>
+
+    <div class="productdisplaycontainer">
+        <div class="productheader">Hordawn</div>
+    </div>
+
+    <div class="clothingtype">Upper Clothing</div>
+    <div class="upperclothingcontainer">
+        <div class="upperclothing"><img src="jacket1.jpg" class="insideupperclothing"></div>
+        <div class="upperclothing"></div>
+        <div class="upperclothing"></div>
+        <div class="upperclothing"></div>
+        <div class="upperclothing"></div>
+        <div class="upperclothing"></div>
     </div>
     
 </body>
