--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="home.css">
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap">
 </head>
@@ -36,6 +37,28 @@
                     Log out
                 </button>
             </a>
+        </div>
+    </div>
+
+    <div class="mainhomecontainer">
+        <div class="mainhomecontainercontent">
+            <div class="mainhomecontent">
+                <div class="contentheader">
+                    <img src="profilez.jpg" class="profileicon">
+                    <div class="postdetailscontainer">
+                        <div class="profileusername">Jordan</div>
+                        <div class="postdate">13/08/2025</div>
+                        <div class="postdescription">Example description cause why not.</div>
+                    </div>
+                </div>
+                <img src="post1.png" class="posts">
+                <div class="interactionscontainer">
+                    <button class="iconbuttons"><img src="heart.png" class="posticons"></button>
+                    <button class="iconbuttons"><img src="chat.png" class="posticons"></button>
+                    <div class="relevantcomment">Jordan: Hello this is an example comment.</div>
+                    <button class="amountofcomments">View all 62 comments.</button>
+                </div>
+            </div>
         </div>
     </div>
 
