--- a/about.html
+++ b/about.html
@@ -64,6 +64,10 @@
                     about it so uhhh yes. Also the services it's empty rn so maybe in the future <br> once I get more ideas I'm also gonna have to polish
                     the contacts tab since it looks a lil messy n shi so yah, I might also add a working audio.
                 </div>
+                <div class="aboutlogsmaincontainercontentupdate">Update 1.1</div>
+                <div class="aboutlogsmaincontainercontentupdatedescription">Home Update - I added a kind of example post but the code is not really loading so
+                    i'll have to figure that out.
+                </div>
             </div>
         </div>
     </div>
@@ -82,4 +86,5 @@
         </div>
     </div>
 </body>
+
 </html>
