--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="home.css">
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Metal&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="constructioncontainer">
@@ -40,6 +41,23 @@
         </div>
     </div>
 
+    <div class="homecontainermain">
+        <div class="homecontainermaincontent">
+            <div class="homecontainermaincontenttitle">Home
+                <div class="homecontainermaincontentdescription">Welcome to the home tab, it's empty right now but
+                    <br>
+                    hopefully i think of something to add here soon enough.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<div class="hiddenhomecontainer" data-vjs-player="true" data-autoplay-video="true">
+<video class="video" src="zncz.mp4" autoplay muted playsinline data-vjs-player="true"></video>
+</div>
+
+
     <div class="mainhomecontainer">
         <div class="mainhomecontainercontent">
             <div class="mainhomecontent">
@@ -53,7 +71,6 @@
                 </div>
                 <img src="post1.png" class="posts">
                 <div class="interactionscontainer">
-                    <button class="iconbuttons"><img src="heart.png" class="posticons"></button>
                     <button class="iconbuttons"><img src="chat.png" class="posticons"></button>
                     <div class="relevantcomment">Jordan: Hello this is an example comment.</div>
                     <button class="amountofcomments">View all 62 comments.</button>
