--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <a class="links" href="services.html">Services</a>
         <div class="activitycontainer">
             <button class="login">Login</button>
-            <button class="signup">Sign up</button>
+            <a href="signup.html" class="signup">
+                <button class="signupcontent">Sign up</button>
+            </a>
+            
         </div>
     </div>
     <div class="logincontainer">
