--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="services.css">
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap">
 </head>
@@ -35,6 +36,59 @@
                     <img src="user-logout.png" class="logoutmainicon">
                     Log out
                 </button>
+            </a>
+        </div>
+    </div>
+
+    <div class="servicestitle">Services</div>
+    <div class="servicesdescription">This is what the website offers, I hope you have fun!</div>
+    <br>
+
+    <div class="servicesmaincontainer">
+        <div class="servicesmaincontentcontainer">
+            <a href="about.html" class="servicesmaincontent">
+                <div class="contenticon">
+                    <img src="information-button.png" class="contenticonimage">
+                </div>
+                 <div class="servicesmaincontentdesccontainer">
+                    <div class="servicesmaincontentdesccontainertitle">About</div>
+                    <div class="servicesmaincontentdesccontainerdescription">This is the about section of the
+                        website, this is where the updates are displayed and what else have changed in the website.
+                    </div>
+                 </div>
+            </a>
+            <a href="contact.html" class="servicesmaincontent">
+                <div class="contenticon">
+                    <img src="user.png" class="contenticonimage">
+                </div>
+                 <div class="servicesmaincontentdesccontainer">
+                    <div class="servicesmaincontentdesccontainertitle">Contacts</div>
+                    <div class="servicesmaincontentdesccontainerdescription">Here is where you'll find
+                        my socials and other stuff like instagram, facebook etc.
+                    </div>
+                 </div>
+            </a>
+            <a href="products.html" class="servicesmaincontent">
+                <div class="contenticon">
+                    <img src="box.png" class="contenticonimage">
+                </div>
+                 <div class="servicesmaincontentdesccontainer">
+                    <div class="servicesmaincontentdesccontainertitle">Products</div>
+                    <div class="servicesmaincontentdesccontainerdescription">This is where my products are displayed 
+                        make sure to check them out, I also take suggestions.
+                    </div>
+                 </div>
+            </a>
+            <a href="home.html" class="servicesmaincontent">
+                <div class="contenticon">
+                    <img src="home.png" class="contenticonimage">
+                </div>
+                 <div class="servicesmaincontentdesccontainer">
+                    <div class="servicesmaincontentdesccontainertitle">Home</div>
+                    <div class="servicesmaincontentdesccontainerdescription">Random contents are displayed here
+                        in the home tab.
+                    </div>
+                 </div>
             </a>
         </div>
     </div>
