--- a/about.html
+++ b/about.html
@@ -68,6 +68,11 @@
                 <div class="aboutlogsmaincontainercontentupdatedescription">Home Update - I added a kind of example post but the code is not really loading so
                     i'll have to figure that out.
                 </div>
+                <div class="aboutlogsmaincontainercontentupdate">Update 1.3</div>
+                <div class="aboutlogsmaincontainercontentupdatedescription">Services update - I added links in services that links thru home products etc
+                    basically my topbar. <br>
+                    Home update - Removed the posting container, changed into text.
+                </div>
             </div>
         </div>
     </div>
