--- a/home.html
+++ b/home.html
@@ -52,6 +52,13 @@
         </div>
     </div>
 
+    <div class="mainhomecontainerlog">
+        <img src="wallhavenwallp.jpg" class="wallhavenwallpimg">
+        <div class="mainhomecontainerlogcontent">
+            
+        </div>
+    </div>
+
 
 <div class="hiddenhomecontainer" data-vjs-player="true" data-autoplay-video="true">
 <video class="video" src="zncz.mp4" autoplay muted playsinline data-vjs-player="true"></video>
