--- a/home.html
+++ b/home.html
@@ -102,6 +102,18 @@
     </div>
     </footer>
 
+    <div class="mainuppercontainer">
+        <div class="mainuppercontainer-content">
+            <div class="mainhomecontainer-content-content">A</div>
+            <div class="mainhomecontainer-content-content">B</div>
+            <div class="mainhomecontainer-content-content">C</div>
+            <div class="mainhomecontainer-content-content">D</div>
+            <div class="mainhomecontainer-content-content">E</div>
+            <div class="mainhomecontainer-content-content">F</div>
+        </div>
+    </div>
+
+    <div class="content-divider"></div>
 
 </body>
 </html>
